# django_auditlog_example

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
accounts/migrations/: 0001_initial.py
auditlog_extensions/: apps.py
auditlog_extensions/management/commands/: auditlog_cleanup.py
books/: conftest.py  factories.py  models.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py
django_auditlog_example/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
reports/management/commands/: auditlog_report.py
src/django_auditlog_example/: __init__.py
templates/: base.html  home.html
templates/books/: detail.html  home.html
templates/registration/: login.html
